--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-charts": "^7.23.1",
     "@reduxjs/toolkit": "^2.3.0",
     "jest-environment-jsdom": "^29.7.0",
+    "powerbi-client-react": "^1.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
