--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/styled-engine": "^6.1.10",
     "@mui/x-charts": "^7.23.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.9",
     "jest-environment-jsdom": "^29.7.0",
     "powerbi-client-react": "^1.4.0",
     "react": "^18.3.1",
